static/style.css
body {
    background-image: linear-gradient(to right,#54BAB9, #9ED2C6);
    font-family: 'Figtree', sans-serif;
    margin-top: 60px;
}

@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300;800&display=swap');

.bkgrn-menu {
    background-color: #BFE4E1;
    border: none;
    border-radius: 9px;
    color:#1D5C63;
    font-weight: bold;
    padding: 5px 30px;
    text-align: center;
    margin-bottom: 8px;
    width: 110px;
}

.bkgrn-menu-message {
    animation-name: fadeOut;
    animation-duration: 5s;
    background-color: #BFE4E1;
    border: none;
    border-radius: 9px;
    box-shadow: 1px 1px 1px black;
    color:#1D5C63;
    font-weight: bold;
    margin-bottom: 8px;
    margin-top: 0;
    opacity: 1;
    padding: 5px 30px;
    text-align: center;
    width: 100%; 
    z-index: 4;
}

.bkgrn-menu-undo {
    animation-name: fadeOut;
    animation-duration: 10s;
    background-color: #BFE4E1;
    border: none;
    border-radius: 9px;
    box-shadow: 1px 1px 1px black;
    color:#1D5C63;
    font-weight: bold;
    padding: 5px 30px;
    text-align: center;
    margin-bottom: 8px;
    opacity: 1;
}

@keyframes fadeOut {
    60% {opacity:1}
    100% {opacity: 0;}
}
.bkgrn-menu p {
    margin: 0;
}

.bkgrn-table {
    background-color: #BFE4E1;
    border: none;
    border-radius: 9px;
    color:#1D5C63;
    font-weight: bold;
    padding: 5px 30px;
    text-align: center;  
    width: 40px;
}

.bkgrn-table-check {
    background-color: #BFE4E1;
    border: none;
    border-radius: 9px;
    color:#1D5C63;
    font-weight: bold;
    padding: 5px 30px;
    text-align: center;  
    
}

.bkgrn-dot{
    color: #1D5C63;
    font-size: 103%;
    font-weight: bolder;
    left: 29.6% !important;
    margin: 0;
    position: absolute;
}

.bkgrn-check {
    border: none;
    border-radius: 50%;
    box-shadow: 0 1px 2px;
}

#bottom-buttons {
    margin-top: 10px;
    position: relative;
    width: 100%;
    text-align: center;
    z-index: 2;
}

#bottom-text {
    background:none;
    left:0;
    right: 0;
    max-height: 58em;
    max-width: fit-content; 
    /*overflow-y: auto; */
    position: absolute;
    width: 69%;
    margin: auto;
    top: clamp(50px, 75%, 600px);
    z-index: 3;
}

.btn-dropdown {
    background-color: #BFE4E1;
    border: none;
    border-radius: 17px;
    color:#1D5C63;
    font-weight: bold;
    margin: 3px;
    padding: 5px 30px;
    width: 110px;
}

.btn-dropdown:hover {
    background-color: #1D5C63;
    border: none;
    border-radius: 17px;
    color:#BFE4E1;
    margin: 3px;
    font-weight: bold;
    padding: 5px 30px;
    width: 110px;
}

.button-play {
    background-color: #54BAB9;
    border: none;
    border-radius: 9px;
    color:#1D5C63;
    font-weight: bold;
    padding: 5px 30px;
    box-shadow: 1px 1px 1px black;
}

.button-play:hover {
    background-color:#20FC8F;
}

.button-play:active{
    background-color: #1D5C63;
}

.button-timers {
    background-color: #1D5C63;
    border: none;
    border-radius: 17px;
    color:#BFE4E1;
    font-weight: bold;
    padding: 5px 30px;
    margin-bottom: 0.3em;
}

.button-timers:hover{
    background-color: #20FC8F;
}

.button-timers:active{
    background-color: #54BAB9;
    color:#9ED2C6;
    transition: .2s;
}

.checkbox-label {
    font-family: system-ui, sans-serif;
    font-size: 2rem;
    font-weight: bold;
    line-height: 1.1;
    display: inline-block;
    grid-template-columns: 1em auto;
    gap: 0.5em;
}

#circle-numb-timers{
    background: #1D5C63;
    width: 150px;
    height: 150px;
    position: relative;
    border-radius: 50%;
    border: solid #BFE4E1 8px;
    text-align: center;
    margin: auto;
    box-shadow: 1px 1px 1px black;
}

.circle-timers{
    background: #1D5C63;
    border: solid #BFE4E1 8px;
    border-radius: 50%;
    box-shadow: 1px 1px 1px black;
    width: 150px;
    height: 150px;
    position: relative;
    margin: auto;
    text-align: center;
}

.circle-timers p {
    display:inline-block;
    position: relative;
    font-weight: bold;
    font-size: 238%;
    color:#BFE4E1;
    text-shadow: 1px 1px 1px black;
}

#current-timer-text-cont {
    font-size:130%;
    position: relative;
    bottom: 1.9em;
    display: inline;
}

#current-timer-cont{
    position: relative;
    left: 4.2em;
    bottom: 2.1em;
    box-shadow: 1px 1px blackS;
}

#first-buttons {
    text-align: center;
}

footer {
    color: #20FC8F;
    position: absolute;
    bottom: 0;
    left: 50%;
    z-index: 3;
}

input[type="checkbox"] {
    -webkit-appearance: none;
    appearance: none;
    background-color: #fff;
    margin: 0;
    /*font: inherit;*/
    color: currentColor;
    width: 1.15em;
    height: 1.15em;
    border-radius: 50%;
    transform: translateY(-0.075em);
    display: grid;
    place-content: center;
}

input[type="checkbox"]::before {
    content: "";
    width: 0.65em;
    height: 0.65em;
    transform: scale(0);
    transition: 120ms transform ease-in-out;
    box-shadow: inset 1em 1em var(--form-control-color);
    border-radius: 50%;
}

input[type="checkbox"]:checked::before{
    background-color: #1D5C63;
    transform: scale(1);
}

.logo {
    float: left;
    margin-left: 25px;
}

@media screen and (max-width: 800px) {
    #secondDiv {
        top: 14.5em;
    }
    .bkgrn-menu{
        padding: 5px 15px;
    }

    #bottom-buttons {
        top:14.8em;
    }
}

.navbar {
    overflow: visible;
    position: fixed;
    top: 1em;
    width: 98%;
}

nav a {
    color: #20FC8F;
    text-decoration: none;
    text-transform: uppercase;
}
nav ul {
    float: right;
    list-style: none;
    margin-right: 25px;
}

nav li {
    display: inline-block;
    margin-left: 70px;
    padding-top: 16 px;
}

#next-text{
    color:#1D5C63;
    margin-top: 0;
    margin-bottom: 0.3em;
}

#option-first-div {
    position: relative;
    top: 40px;
}

.timer-check {
    display: inline-block;
}

.timer-dropdown {
    position: relative;
    display: block;
    top: 0.5em;
    z-index: 3;
}

.timer-dropdown div {
    backdrop-filter: blur(10px);
    padding: 0.1em;
    border-radius: 5px;
}

.timer-first-div {
    display: inline-block;
    width: 100%;
    text-align: center;

}

#timer-load-buttons {
    position: relative;
    display: inline-block;
}

.timer-second-div {
    margin: auto;
    position: relative;
    text-align: center;
    width: max-content;
}

.timer-second-div table {
    position: relative;
    margin: auto;
}

.timer-second-div p {
    display: inline-block;
}

.timer-user-dropdown {
    display: none;
    position: absolute;
    min-width: 160px;
    z-index: 1;
}

.timer-user-dropdown div{
    margin:auto;
    width: max-content;
}
.timer-user-dropdown p {
    background-color: #38423B;
    color: white;
    display: inline-block;
    padding: 12px 16px;
    text-decoration: none;
}

.timer-user-dropdown p:hover {
    background-color: #ddd;
}

#tset-cont-container {
    display:block;
    position: relative;
}

.tset-cont {
    color:#1D5C63;
    display:inline-block;
    font-weight: bold;
    position: relative;
}

.tset-num-timers {
    background: transparent;
    border: none; 
    display: inline-block;
    position: relative;
    font-weight: bolder;
    font-size: 200%;
    color: #BFE4E1;
    width: 48px;
    text-shadow: 1px 1px 1px black;
    text-align: center;
}

.tset-num-timers::placeholder{
    font-weight: bold;
    color: #BFE4E1;
}

.tset-text {
    color:#BFE4E1;
    display: inline-block;
    margin-right: 10px;
    font-size:20px;
    font-weight: bold;
    position: relative;
    top: 20px;
    text-shadow: 1px 1px 1px black;
}

.show {
    display: block;
}

#userTimers input{
    width: 40px;
}

#userTimers input[type="checkbox"] {
    width: 1.15em;
    height: 1.15em;
}

